style:add mobile design

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			</div>
 
 			<div class="card-img">
+				<!-- <div class="img-overlayer"></div> -->
 				<img class="main-img" src="images /image-header-desktop.jpg" alt="students image">
 			</div>
 
