style:adjust mobile design

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 			</div>
 
 			<div class="card-img">
-				<!-- <div class="img-overlayer"></div> -->
+
 				<img class="main-img" src="images /image-header-desktop.jpg" alt="students image">
+				<div class="img-overlayer"></div>
 			</div>
+
 
 		</div>
 	</main>
